# stapel-listings

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  actions.py  admin.py  apps.py  checks.py  conf.py  conftest.py  dto.py  errors.py  events.py  functions.py  gdpr.py  models.py  pyproject.toml  serializers.py  urls.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
migrations/: 0001_initial.py  0002_listing_countable_stock_quantity.py  0003_alter_listing_currency.py  0004_listing_lat_lon.py
schemas/consumes/: category.changed.json  moderation.completed.json  user.deleted.json
schemas/emits/: listing.published.json  listing.removed.json  listing.submitted.json  listing.updated.json
schemas/functions/: listings.status.json
services/: __init__.py  category_schema.py  features.py  pricing.py  publish.py
tests/: seams.py  test_api.py  test_comm.py  test_extension_points.py  test_favorites.py  test_features.py  test_gdpr.py  test_public_api.py  test_publish.py  test_state_machine.py  test_stock.py  test_validation.py  urls.py
