[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-listings"
version = "0.1.1"
description = "Listings and catalog for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "listings"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.3,<0.4",
    "stapel-attributes>=0.1,<0.2",
    "djangorestframework>=3.14",
    "djangorestframework-dataclasses>=1.2",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_listings" = "."}
packages = ["stapel_listings", "stapel_listings.migrations", "stapel_listings.services", "stapel_listings.tests"]

[tool.setuptools.package-data]
stapel_listings = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
